Tweaked overflow-x issue and made images scalable

--- a/src/Css/sponsors.css
+++ b/src/Css/sponsors.css
@@ -1,5 +1,6 @@
 body {
 	font-family: 'Raleway', sans-serif;
+	overflow-x: hidden;
 }
 
 .sponsors {
@@ -7,13 +8,72 @@ body {
 	width: 90%;
 	margin: auto;
 	padding-bottom: 50px;
+	/*max-height: 500px; This will cut the sponsors page down a bit*/
 	/*padding-left: 0px;*/
 }
 
-.sponsors img {
-	width: 150px;
-	height: 150px;
-	margin: 20px;
+#GM{ /*this is some resizing code*/
+	max-width: 15%;
+    min-width: 75px; 
+    height: auto;
+    width: auto\9; /* ie8 */
+    padding: 10px; 
+}
+
+#SAE{
+	max-width: 20%;
+    min-width: 100px; 
+    height: auto;
+    width: auto\9; /* ie8 */
+    padding: 10px; 
+}
+
+#UWEng{
+	max-width: 35%;
+    min-width: 175px; 
+    height: auto;
+    width: auto\9; /* ie8 */
+    padding: 10px; 
+}
+
+#Math{
+	max-width: 27%;
+    min-width: 170px; 
+    height: auto;
+    width: auto\9; /* ie8 */
+    padding: 10px; 
+}
+
+#tass{
+	max-width: 25%;
+    min-width: 135px; 
+    height: auto;
+    width: auto\9; /* ie8 */
+    padding: 10px; 
+}
+
+#con{
+	max-width: 25%;
+    min-width: 200px; 
+    height: auto;
+    width: auto\9; /* ie8 */
+    padding: 10px; 
+}
+
+#intel{
+	max-width: 15%;
+    min-width: 70px; 
+    height: auto;
+    width: auto\9; /* ie8 */
+    padding: 10px; 
+}
+
+#velo{
+	max-width: 27%;
+    min-width: 200px; 
+    height: auto;
+    width: auto\9; /* ie8 */
+    padding: 10px; 
 }
 
 @media screen and (max-width: 480px) {
@@ -26,6 +86,7 @@ body {
 	}
 }
 
+/* Ok no more hardcoding in the image sizes hahaha.
 #UWEng {
 	width: 360px;
 	height: 110px;
@@ -54,7 +115,7 @@ body {
 #velo {
 	width: 360px;
 	height: 80px;
-}
+} */
 
 .title {
 	text-align: center;
